tests/NormalTests/paczka1/fuzzy1/83950447.err
Error in line 1: 4I60 A206 45,9
Error in line 11: GjCrOrJBm1 A206 89,0
Error in line 12: GjCrOrJBm1 S702 78,8
Error in line 10: S702 A643 6,8
Error in line 22: GvYsiW A451 14,8
Error in line 2: 4I60 A451 9,2
Error in line 24: 4I60 S702 19,0
